@@ -93,7 +93,7 @@ module BoxGrinder
       it "should disable bios device name hints for GRUB legacy" do
         guestfs = mock("GuestFS")
         guestfs.should_receive(:exists).with("/boot/grub2/grub.cfg").and_return(0)
-        guestfs.should_receive(:exists).with("/boot/grub/grub.cfg").and_return(1)
+        guestfs.should_receive(:exists).with("/boot/grub/grub.conf").and_return(1)
         guestfs.should_receive(:sh).with("sed -i \"s/kernel\\(.*\\)/kernel\\1 biosdevname=0/g\" /boot/grub/grub.conf")
         @plugin.disable_biosdevname(guestfs)
       end
@@ -101,7 +101,7 @@ module BoxGrinder
       it "should disable bios device name hints for GRUB2" do
         guestfs = mock("GuestFS")
         guestfs.should_receive(:exists).with("/boot/grub2/grub.cfg").and_return(1)
-        guestfs.should_receive(:exists).with("/boot/grub/grub.cfg").and_return(0)
+        guestfs.should_receive(:exists).with("/boot/grub/grub.conf").and_return(0)
         guestfs.should_receive(:write).with("/etc/default/grub", "GRUB_CMDLINE_LINUX=\"quiet rhgb biosdevname=0\"\n")
         @plugin.disable_biosdevname(guestfs)
       end
