@@ -1,6 +1,7 @@
 v0.9.6
 
 * [BGBUILD-298] Fedora 16 or newer has networking issue on platforms different than EC2 because of biosdevname not disabled
+* [BGBUILD-299] Wrong filenames in GRUB discovery
 
 v0.9.5.3
 
